--- a/resources/gomoku.htm
+++ b/resources/gomoku.htm
@@ -3,83 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>五子棋</title>
-    <style type="text/css">
-        body {
-            background-color: #ddd;
-            margin: 0;
-        }
-
-        .board-container {
-            float: left;
-            margin: 13px;
-            width: 535px;
-            height: 535px;
-        }
-
-        .board {
-            background-image: url(board.jpg);
-            background-repeat: no-repeat;
-            background-size: 535px 535px;
-            width: 535px;
-            height: 535px;
-            padding: 5px 0 0 5px;
-        }
-
-        .board-row {
-            margin: 0;
-            padding: 0;
-            height: 35px;
-        }
-
-        .board-col {
-            display: inline-block;
-            background-repeat: no-repeat;
-            background-size: 33px;
-            width: 35px;
-            height: 35px;
-        }
-
-        .cross-point {
-            width: 25px;
-            height: 25px;
-            margin: 5px;
-            cursor: pointer;
-        }
-
-        .button-container {
-            padding: 10px;
-            margin-left: 548px;
-        }
-
-        .option-container {
-            margin: 10px;
-            border: 1px solid #999;
-            border-radius: 10px;
-        }
-        
-        .option-button {
-            display: block;
-            width: 97px;
-            height: 30px;
-            margin: 40px auto;
-        }
-
-        .option-select {
-            display: block;
-            width: 110px;
-            height: 30px;
-            margin: 40px auto;
-            border: 1px solid rgba(34,36,38,.15);
-            border-radius: 4px;
-            text-align: center;
-            text-indent: 17px;
-            line-height: 1.8em;
-        }
-
-        .option-select option {
-            text-indent: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="gomoku.css">
 
     <script type="text/tiscript" src="q.tis"></script>
     <script type="text/tiscript" src="gomoku.tis"></script>
