--- a/resources/gomoku.htm
+++ b/resources/gomoku.htm
@@ -30,7 +30,7 @@
             <button class="option-button" id="next-step">提示</button>
             <select class="option-select" id="assist-ability">
                 <option value="newbee">新手</option>
-                <option value="superior" selected="selected">高手</option>
+                <option value="master" selected="selected">高手</option>
             </select>
         </div>
     </div>
